plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.mockops'
version = '0.0.1-SNAPSHOT'
description = 'MockOps backend service for dynamic API server mocking and health checking.'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-security-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	annotationProcessor 'org.projectlombok:lombok'

	// test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testRuntimeOnly 'com.h2database:h2'

	// JWT 처리 라이브러리 (Access Token 및 WebHook 토큰)
	// jjwt-api: JWT API 인터페이스
	implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
	// jjwt-impl & jjwt-jackson: 구현체 및 JSON 처리
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'

	// HTTP 클라이언트 (헬스 체크 요청 발송용)
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	// Swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'

	// 메일
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	// 메일 발송을 위한 템플릿 엔진
	implementation 'org.thymeleaf:thymeleaf-spring6'
}

tasks.named('test') {
	useJUnitPlatform()
}
